# ZXPicoIF2ROM

./: CMakeLists.txt  README.md  compressROM.c  picoif2.c  picoif2.pio  picoif2.uf2  roms.h
UF2/: picoif2.uf2
